--- a/External/EVEBots_dotNET/C# stuff/EveBots/EveBots.csproj
+++ b/External/EVEBots_dotNET/C# stuff/EveBots/EveBots.csproj
@@ -51,11 +51,11 @@
       <DependentUpon>ClientsWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="EVEWatcher.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MainInterface.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainInterface.Designer.cs">
+      <DependentUpon>MainInterface.cs</DependentUpon>
     </Compile>
     <Compile Include="LauncherProfiles.cs" />
     <Compile Include="Program.cs" />
@@ -63,8 +63,8 @@
       <DependentUpon>ClientsWindow.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainInterface.resx">
+      <DependentUpon>MainInterface.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
