--- a/External/EVEBots_dotNET/C# stuff/EveBots/EveBots.csproj
+++ b/External/EVEBots_dotNET/C# stuff/EveBots/EveBots.csproj
@@ -58,6 +58,12 @@
       <DependentUpon>MainInterface.cs</DependentUpon>
     </Compile>
     <Compile Include="LauncherProfiles.cs" />
+    <Compile Include="ProfileControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ProfileControl.Designer.cs">
+      <DependentUpon>ProfileControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <EmbeddedResource Include="ClientsWindow.resx">
       <DependentUpon>ClientsWindow.cs</DependentUpon>
@@ -65,6 +71,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainInterface.resx">
       <DependentUpon>MainInterface.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProfileControl.resx">
+      <DependentUpon>ProfileControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
