--- a/External/EVEBots_dotNET/C# stuff/EveBots/EveBots.csproj
+++ b/External/EVEBots_dotNET/C# stuff/EveBots/EveBots.csproj
@@ -43,7 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
+    <Compile Include="BotControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BotControl.Designer.cs">
+      <DependentUpon>BotControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Session.cs" />
     <Compile Include="ClientsWindow.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -51,6 +57,7 @@
       <DependentUpon>ClientsWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="EVEWatcher.cs" />
+    <Compile Include="ISBoxerSettings.cs" />
     <Compile Include="MainInterface.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,6 +72,10 @@
       <DependentUpon>ProfileControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <EmbeddedResource Include="BotControl.resx">
+      <DependentUpon>BotControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="ClientsWindow.resx">
       <DependentUpon>ClientsWindow.cs</DependentUpon>
       <SubType>Designer</SubType>
