added some pieces that will soon be joined to make solo mining work in a basic way

--- a/External/evecmd/evecmd.csproj
+++ b/External/evecmd/evecmd.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="EveCmd.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="MiningStates.cs" />
     <Compile Include="MissionPage.cs" />
     <Compile Include="MissionStates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
