--- a/External/evecmd/evecmd.csproj
+++ b/External/evecmd/evecmd.csproj
@@ -52,9 +52,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ISXEVEWrapper">
-      <HintPath>..\..\..\..\ISXEVEWrapper\branches\Beta\bin\Debug\ISXEVEWrapper.dll</HintPath>
-    </Reference>
     <Reference Include="Lavish.InnerSpace, Version=1.0.0.0, Culture=neutral, PublicKeyToken=9029a3ab4cbe108d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Program Files (x86)\InnerSpace\Lavish.InnerSpace.dll</HintPath>
@@ -100,6 +97,12 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\ISXEVEWrapper\branches\Beta\EVE.ISXEVE.csproj">
+      <Project>{A9583204-C40D-4496-BB62-0F9546E5D613}</Project>
+      <Name>EVE.ISXEVE</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
